services/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
spec:
  selector:
    app.kubernetes.io/name: nextcloud
  type: ClusterIP
  ports:
  - port: 80
    name: http
    protocol: TCP
